Fix Bug 412122 - Crash when closing the composer

I can't reproduce it, but I disconnect signal when we detroy composer.
I hope that it will fix this crash
BUG: 412122
FIXED-IN: 5.12.2